--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -11,7 +11,7 @@
     "social": "Социальные сети",
     "contacts": "Контакты",
     "copyright": "Все права защищены.",
-    "love": "Сделано с <1></1> и <2></2> для наших клиентов."
+    "love": "Сделано с <l1></l1> и <l2></l2> для наших клиентов."
   },
 
   "home": {
@@ -127,5 +127,14 @@
     "not_found": "Страна не найдена."
   },
 
-  "more": "Более"
+  "more": "Более",
+
+  "thanks": {
+    "p1": "Спасибо, что выбрали ComPare",
+    "p2": "Мы свяжемся с вами в ближайшее время."
+  },
+  "_404_": {
+    "not": "Страница недоступна.",
+    "home": "Главная"
+  }
 }
